2004-10-18  Shiro Kawai  <shiro@acm.org>

	* src/kahua-spvr.scm :
	- static document can be handled in httpd mode.
	- handle worker-specified header (e.g. '302 Moved') properly.
	* src/Makefile.in, src/make-testconf.scm : allow 'in-place' test
	  running.  It is done by creating required symlinks under
	  $(top_builddir)/tmp, and generating a test.conf that points to
	  the directory as working directory.

2004-10-15  Shiro Kawai  <shiro@acm.org>

	* src/kahua/config.scm.in : added kahua-version
	* src/Makefile.in : ditto
	* src/kahua-spvr.scm : added httpd support.  enabled by --httpd or -H
	  option.  static document uri handling and certain header handling
	  aren't working yet.

2004-10-14  Shiro Kawai  <shiro@acm.org>

	* src/make-testconf.scm : a script to generate conf file for
	  'in-place' testing.

	* branching shiro_reorg1 to experiment reorganization.
	* src/kahua-*.in : renamed to kahua-*.scm, and will be installed to 
	  the kahua library directory.
	* src/maka-script.scm : generates shell scripts for kahua commands.
	* test/*.scm.in : fixed accodringly.
	* Makefiles : fixed accordingly.

2004-10-13  Shiro Kawai  <shiro@acm.org>

	* src/kahua/config.scm.in (kahua-init):
	- fix error message.

2004-10-12 Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/server.scm
	- Added interp-rss

2004-09-14 Kenji Hisazumi <nel@soraneko.com>

	* src/kahua/query.scm, plugins/query.scm, test/query.scm:
	- Rewrite query.scm as a plugin 
	and move src/kahua/query.scm to plugins/query.scm.

2004-09-07 Kenji Hisazumi <nel@soraneko.com>

	* src/kahua/query.scm, test/query.scm:
	- Added kahua.query module which is a query language for 
	kahua.persistence.

2004-09-02 Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.2.8:
	Fixed.
	- Build process cleanuped
	- Avoid some tests to stack with Gauche 0.8.1
	Ad hoc patch
	- Enable to include apostrophies in (S)XML attribute value string.
	
2004-08-12 Nobuo Yamashita  <nobsun@sampou.org>
